src/objects/G2OPlanning_Release_Package_Reference__c.object
<CustomObject>
    <fields>
        <fullName>Release_Package_Name__c</fullName>
        <formula>Release_Package__r.Descriptoin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Package Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Package__c</fullName>
        <label>Release Package</label>
        <referenceTo>G2OPlanning_Release_Package__c</referenceTo>
        <relationshipLabel>Work item</relationshipLabel>
        <relationshipName>Release_Package_References</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Work_Item_Task__c</fullName>
        <formula>Work_item__r.Task__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Item Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_item__c</fullName>
        <label>Work item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>G2OPlanning_WorkItem__c.Developer__c</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>G2OPlanning_WorkItem__c</referenceTo>
        <relationshipLabel>Release Package</relationshipLabel>
        <relationshipName>Release_Package_Reference</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Release Package Reference</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Release Package Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Package References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>